app/assets/stylesheets/application.less
@import 'bootstrap_and_overrides';
@import 'landing.less';
@import 'orders.less';

#content{
  min-height: 98vh;
  padding-top: @navbar-height;
  padding-bottom: @navbar-height / 2;
}

.header-app{
  @media screen and (min-width: @grid-float-breakpoint){
    .navbar-inverse;
  }

  background: @brand-primary;
  overflow: hidden;
  width: 100%;
  margin: 0;
  top: 0;
  z-index: 100;
  height: @navbar-height;
  box-shadow: 0px 1px 8px black;

  .navbar-brand{
    line-height: @navbar-height;
    padding: 10px;
    img{
      max-height: @navbar-height - 20px;
    }
  }

  .navbar-collapse{
    @media screen and (max-width: @grid-float-breakpoint){
      &.in, &.collapsing{
        .well;
        border-radius: 0;
        width: 100vw;
        position: fixed;
        padding: 0 2em;
        z-index: 99;
      }
    }
    @media screen and (min-width: @grid-float-breakpoint){
      .open .dropdown-menu{
        position: fixed;
        top: @navbar-height;
        width: 10em;
      }
    }
  }
}

.sticky:not(.fixed){
  height: 0 !important;
  position: fixed;
  transition: height .3s;
  &.in{
    height: @navbar-height !important;
  }
}

header.header-abs{
  position: absolute;
  background: transparent;
  font-family: Roboto Condensed;
  font-size:  18px;
  color: black;
  padding-top: 4px;
  padding-left: 10%;
}

a.tel{
  font-family: Roboto Condensed;
  font-size: 18px;
}

.card{
  .well;
  border: none;
  padding: 0;
  color: @gray-darker;
  overflow: hidden;
  max-width: 400px;
  height: 480px;

  .card-img-container{
    @media screen and (min-width: 0) and (max-width: @screen-sm){
      height: 66%;
    }
    @media screen and (min-width: @screen-sm){
      height: 66%;
    }
    width: 100%;
  }

  .card-img{
    height: 100%;
  }

  .card-heading{
    color: black;
    min-height: 60px;
    h2{
      margin-bottom: 0;
    }
    h3{
      font-family: Roboto Condensed;
      margin-top: 0.1em;
      color: lighten(black, 20%);
      font-size: 18px;
    }
  }

  .card-description{
    text-align: left;
    margin-top: 1em;
    .icon{
      width: 2em;
    }
  }

  .card-footer{
    position: absolute;
    margin-bottom: 1.5em;
    padding-left: 1em;
    bottom: 0;
  }
}

.carousel-caption{
  margin: 0;
  bottom: 0;
  padding-bottom: 0.5em;
  text-align: left;
  left: 0;
  width: 100%;
  hgroup{
    h1,h2,h3,h4 { margin-bottom: 0.1em; margin-top: 0; }
    margin-bottom: 0.3em;
  }
  section{
    position: absolute;
    bottom: 0;
    right: 0;
    margin-bottom: 1em;
  }
  box-shadow: inset 0px -80px 40px -40px rgba(0,0,0,0.5);
}

.description{
  white-space: pre-line;
  word-wrap: normal;
  background: transparent;
  text-align: left;
}

.no-gutter{
  margin-left: 0;
  margin-right: 0;
  padding-left: 0;
  padding-right: 0;
}

.fade{
  opacity: .5;
}

.text-inverse{
  &, a, span, li, p, i, em, strong { color: white; }
  a:hover{ *{ color: black } }
}

.material.form-inline{
  display: inline-flex;
  align-items: center;
}

